# smelter

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  RELEASE.md  bench.txt  build.Dockerfile  common.env  compose.yaml  compose.yml  demo_json.json  h264_plan.md  index.html  nginx.conf  plan.md  playground.html  run.Dockerfile  search.html  simpler_test.sh  t
compositor_api/: Cargo.toml
compositor_api/src/: audio.rs  common_pipeline.rs  input.rs  lib.rs  output.rs  resource.rs  types.rs  video.rs
compositor_api/src/common/: id.rs  resolution.rs
compositor_api/src/common_pipeline/: api_error.rs  protocol.rs
compositor_api/src/input/: decklink.rs  decklink_into.rs  hls.rs  hls_into.rs  mp4.rs  mp4_into.rs  rtp.rs  rtp_into.rs  whip.rs  whip_into.rs
compositor_api/src/output/: common.rs  common_into.rs  hls.rs  hls_into.rs  mp4.rs  mp4_into.rs  rtmp.rs  rtmp_into.rs  rtp.rs  rtp_into.rs  whep.rs  whep_into.rs  whip.rs  whip_into.rs
compositor_api/src/resource/: image.rs  shader.rs
compositor_api/src/types/: component.rs  from_component.rs  from_register_input.rs  from_register_output.rs  from_util.rs  register_input.rs  register_output.rs  util.rs
compositor_api/src/video/: color.rs  common_into.rs  component.rs  component_into.rs  transition.rs
compositor_web/: Cargo.toml
compositor_web/example/: index.html
compositor_web/src/: types.rs  wasm.rs
compositor_web/src/wasm/: copy_texture_to_canvas.wgsl  input.rs  input_uploader.rs  output.rs  output_downloader.rs  renderer.rs  types.rs  wgpu.rs
gpu-video/: CHANGELOG.md  Cargo.toml  README.md  build.rs
gpu-video/examples/: decode.rs  decode_wgpu.rs  encode.rs  encode_wgpu.rs  print_hw_capabilities.rs  transcode.rs
gpu-video/examples/player/: main.rs  player.rs
gpu-video/src/: adapter.rs  backends.rs  capabilities.rs  codec.rs  decoder.rs  decoders.rs  device.rs  dmabuf.rs  encoder.rs  encoders.rs  exports.rs  frame_sorter.rs  global_registry.rs  instance.rs  lib.rs  parser.rs  prelude.rs  transcoder.rs  types.rs  vulkan.rs  vulkan_decoder.rs  vulkan_encoder.rs  vulkan_transcoder.rs  vulkan_video.rs  wgpu_helpers.rs  wrappers.rs
gpu-video/src/adapter/: wgpu_api.rs
gpu-video/src/backends/: video_toolbox.rs  vulkan.rs
gpu-video/src/codec/: h264.rs  h265.rs
gpu-video/src/decoder/: wgpu_api.rs
gpu-video/src/decoders/: wgpu_api.rs
gpu-video/src/device/: caps.rs  queues.rs  wgpu_api.rs
gpu-video/src/dmabuf/: interop.rs  nv12.rs  renderable.rs  semaphore.rs  sync.rs  sync_file.rs  vulkan.rs
gpu-video/src/encoders/: wgpu_api.rs
gpu-video/src/exports/: wgpu_api.rs
gpu-video/src/parser/: au_splitter.rs  decoder_instructions.rs  nalu_parser.rs  nalu_splitter.rs  reference_manager.rs
gpu-video/src/prelude/: wgpu_api.rs
gpu-video/src/quicksync/: display.rs  mod.rs  probe.rs  sys.rs  va.rs  vpl.rs
gpu-video/src/shaders/: rgba_to_nv12.wgsl
gpu-video/src/vaapi/: display.rs  mod.rs
gpu-video/src/vulkan/: codec.rs  vulkan_adapter.rs  vulkan_decoder.rs  vulkan_device.rs  vulkan_encoder.rs  vulkan_instance.rs
gpu-video/src/vulkan_decoder/: frame_sorter.rs  session_resources.rs
gpu-video/src/vulkan_transcoder/: pipeline.rs
integration-tests/: .gitignore  Cargo.toml  demo_json.json  dump.h264  dump_chrome.h264
integration-tests/examples/: aac_rtp_input.rs  audio.rs  decklink.rs  demo_server.rs  docker.rs  encoded_channel_output.rs  hls_input.rs  hls_output.rs  image.rs  manual_graphics_initialization.rs  mp4_output.rs  pass_through.rs  raw_channel_input.rs  raw_channel_output.rs  rescaler_border_transition.rs  rtp_tcp.rs  samples_demo.rs  silly.wgsl  simple.rs  simpler.rs  test_pattern.rs  text.rs  tiles.rs  tiles_blink.rs  transition.rs  v4l2.rs  v4l2_rust_api.rs  view_border_transition.rs  vulkan.rs  web_view.rs  whep_client.rs  whep_server.rs  whip_client.rs  whip_server.rs
integration-tests/macros/: Cargo.toml
integration-tests/src/: aac_decoder.rs  assets.rs  audio_decoder.rs  common.rs  compositor_instance.rs  examples.rs  ffmpeg.rs  gpu_video_tests.rs  gstreamer.rs  lib.rs  media_dump.rs  mp4_reader.rs  output_receiver.rs  paths.rs  pipeline_tests.rs  render_tests.rs  test_input.rs  texture.rs  validation.rs  video_decoder.rs
libcef/: Cargo.toml
libcef/examples/: chromium_simple.rs
libcef/libcef-sys/: Cargo.toml  build.rs  wrapper.h
libcef/src/: app.rs  browser.rs  cef_ref.rs  cef_string.rs  client.rs  command_line.rs  context.rs  frame.rs  lib.rs  main_args.rs  process_message.rs  render_handler.rs  render_process_handler.rs  settings.rs  task.rs  utils.rs  window_info.rs
rtmp/: Cargo.toml
rtmp/examples/: server.rs
rtmp/flv/: Cargo.toml
rtmp/src/: buffered_stream_reader.rs  chunk.rs  client.rs  client_handshake.rs  error.rs  events.rs  ex_capabilities.rs  handle_client.rs  handshake.rs  lib.rs  message.rs  message_reader.rs  negotiation.rs  reconnect.rs  server.rs  track.rs  types.rs  utils.rs
sdks/python/: CLAUDE.md  README.md  pyproject.toml
smelter-api/: Cargo.toml
smelter-api/src/: audio.rs  input.rs  lib.rs  output.rs  video.rs
smelter-api/tests/: input_deserialization.rs  output_deserialization.rs  resource_deserialization.rs  scene_deserialization.rs
smelter-core/: CLAUDE.md  Cargo.toml
smelter-core/src/: audio_mixer.rs  codecs.rs  error.rs  event.rs  graphics_context.rs  input.rs  lib.rs  output.rs  pipeline.rs  prelude.rs  protocols.rs  queue.rs  thread_utils.rs  types.rs
smelter-render/: Cargo.toml
smelter-render/src/: error.rs  event_handler.rs  lib.rs  registry.rs  scene.rs  state.rs  thread.rs  types.rs  wgpu.rs
smelter_api/: Cargo.toml
smelter_api/src/: audio.rs  common.rs  common_core.rs  common_pipeline.rs
tools/: .gitignore  Cargo.toml  release.sh
tools/docker/: full.Dockerfile  slim.Dockerfile
tools/nix/: flake.nix  package.nix
tools/schemas/: openapi_specification.json  scene.schema.json
tools/src/: compositor_instance.rs  lib.rs  paths.rs
va-video/: Cargo.toml
va-video/src/: display.rs  lib.rs
(+2323 files in other folders)
