[package]
name = "smelter"
version = "0.4.0"
edition = "2021"
license-file = "./LICENSE"

[workspace]
members = [
    "compositor_render",
    "compositor_pipeline",
    "compositor_chromium",
    "integration_tests",
    "generate",
    "decklink",
    "compositor_api",
    "compositor_web",
    "vk-video",
]
resolver = "2"

[features]
default = ["web_renderer"]
update_snapshots = []
decklink = ["compositor_api/decklink"]
web_renderer = ["dep:compositor_chromium", "compositor_api/web_renderer"]

[workspace.dependencies]
smelter = { path = ".", default-features = false }
compositor_api = { path = "compositor_api" }
compositor_pipeline = { path = "compositor_pipeline" }
compositor_chromium = { path = "compositor_chromium" }
compositor_render = { path = "compositor_render" }
vk-video = { path = "vk-video" }
bytes = "1.4.0"
serde_json = { version = "1.0.99", features = ["preserve_order"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
log = "0.4.19"
thiserror = "1.0.40"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
signal-hook = "0.3.15"
ffmpeg-next = "7.1.0"
anyhow = "1.0.71"
image = { version = "0.24.7", features = ["jpeg", "png"] }
itertools = "0.14.0"
rand = "0.8.5"
tracing = "0.1.40"
socket2 = "0.5.5"
webrtc = "0.13.0"
webrtc-util = "0.11.0"
opus = "0.3.0"
rubato = "0.15.0"
glyphon = "0.9.0"
futures-util = "0.3.30"
tokio = { version = "1", features = ["full"] }
schemars = { version = "0.8.22", features = ["preserve_order"] }
shared_memory = "0.12.4"
h264-reader = "0.8.0"
wgpu = { version = "25.0.2", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "naga-ir",
    "webgl",
    "fragile-send-sync-non-atomic-wasm",
    "serde"
] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

[dependencies]
compositor_api = { workspace = true }
compositor_render = { workspace = true }
compositor_pipeline = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tiny_http = "0.12.0"
ffmpeg-next = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
signal-hook = { workspace = true }
fs_extra = "1.3.0"
schemars = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2.151"
webrtc-util = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rubato = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.7.4", features = ["ws", "multipart"] }
futures-util = { workspace = true }
wgpu = { workspace = true }
glyphon = { workspace = true }
http-body-util = "0.1.2"
tower-http = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
shared_memory = { workspace = true }
compositor_chromium = { workspace = true, optional = true }

# platforms that support vulkan are: windows and all non-apple unixes. emscripten is a web-based platform, where vulkan is not available either
[target.'cfg(any(windows, all(unix, not(target_os = "emscripten"), not(target_os = "ios"), not(target_os = "macos"))))'.dependencies]
compositor_api = { workspace = true, features = ["vk-video"] }
compositor_pipeline = { workspace = true, features = ["vk-video"] }

[[bin]]
name = "process_helper"
path = "src/bin/process_helper.rs"
required-features = ["web_renderer"]
