[package]
name = "compositor_api"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[features]
default = []
decklink = ["compositor_pipeline/decklink"]
web_renderer = ["compositor_pipeline/web_renderer"]
vk-video = ["compositor_pipeline/vk-video"]

[dependencies]
compositor_render = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
compositor_pipeline = { workspace = true }

