[package]
name = "compositor_web"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
compositor_render = { workspace = true }
compositor_api = { workspace = true }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
log = { workspace = true }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "Element",
    "CanvasRenderingContext2d",
    "ImageData",
    "VideoFrame",
    "VideoFrameCopyToOptions",
    "Navigator",
    "DomRectReadOnly",
] }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
wgpu = { workspace = true }
crossbeam-channel = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
glyphon = { workspace = true }
futures = "0.3.31"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
