[package]
name = "gpu-video"
version = "0.4.0"
edition = "2024"
authors = ["Software Mansion <contact@swmansion.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/software-mansion/smelter"
rust-version = "1.85"
description = "A library for hardware video coding using Vulkan Video, with wgpu integration."
categories = [
    "multimedia::video",
    "multimedia::encoding",
    "hardware-support",
    "encoding",
    "graphics",
]
keywords = ["vulkan", "video", "wgpu", "decoding", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
expose-parsers = []
expose-backends = []
wgpu = [
    "dep:wgpu",
    "dep:objc2-metal",
    "objc2-core-video/CVMetalTexture",
    "objc2-core-video/CVMetalTextureCache",
    "objc2-core-video/objc2-metal",
]
transcoder = ["dep:naga", "dep:bytemuck"]
default = ["wgpu"]

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"], optional = true }
bytes = "1"
derivative = "2.2.0"
h264-reader = { workspace = true }
memchr = "2.7.4"
rustc-hash = "2.1.1"
thiserror = "1.0.59"
tracing = "0.1.40"
wgpu = { version = "30.0.0", optional = true }

# Platforms that support vulkan are: windows and all non-apple unixes. emscripten is a web-based platform, where vulkan is not available either
[target.'cfg(any(windows, all(unix, not(target_os = "emscripten"), not(target_os = "ios"), not(target_os = "macos"))))'.dependencies]
ash = { workspace = true }
vk-mem = "0.4.0"

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2-video-toolbox = { version = "0.3.2", default-features = false, features = [
    "std",
    "VTBase",
    "VTErrors",
    "VTSession",
    "VTDecompressionSession",
    "VTDecompressionProperties",
    "VTCompressionSession",
    "VTCompressionProperties",
    "VTVideoEncoderList",
    "block2",
    "objc2",
    "objc2-core-media",
    "objc2-core-video",
] }
objc2-core-media = { version = "0.3.2", default-features = false, features = [
    "std",
    "CMBase",
    "CMBlockBuffer",
    "CMFormatDescription",
    "CMSampleBuffer",
    "CMTime",
    "objc2",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "CFBase",
    "CFDictionary",
    "CFNumber",
    "CFString",
    "objc2",
] }
objc2-core-video = { version = "0.3.2", default-features = false, features = [
    "std",
    "CVBase",
    "CVBuffer",
    "CVImageBuffer",
    "CVPixelBuffer",
    "CVPixelBufferIOSurface",
    "CVReturn",
    "objc2",
] }
objc2-metal = { version = "0.3.2", default-features = false, features = [
    "std",
    "MTLDevice",
    "MTLPixelFormat",
    "MTLTexture",
], optional = true }
objc2 = { version = "0.6.4" }
block2 = { version = "0.6.2" }
libc = { version = "0.2.186" }
pollster = { workspace = true }

[dev-dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tracing-subscriber = "0.3.20"
wgpu = { version = "30.0.0", features = [
    "noop",
] }
winit = "0.30"
bytemuck = { version = "1.19.0", features = ["derive"] }
pollster = { workspace = true }

[build-dependencies]
cfg_aliases = "0.2.1"
naga = { version = "30.0.0", features = [
    "spv-out",
    "wgsl-in",
], optional = true }

[lints]
workspace = true

[[example]]
name = "decode_wgpu"
required-features = ["wgpu"]

[[example]]
name = "encode_wgpu"
required-features = ["wgpu"]

[[example]]
name = "player"
required-features = ["wgpu"]

[[example]]
name = "transcode"
required-features = ["transcoder"]
