[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web_renderer"]
update_snapshots = []
decklink = ["smelter/decklink"]
web_renderer = [
    "dep:compositor-chromium",
    "smelter-render/web_renderer",
    "smelter/web_renderer",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
smelter = { workspace = true }
smelter-api = { workspace = true }
smelter-core = { workspace = true }
smelter-render = { workspace = true }
compositor-chromium = { workspace = true, optional = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ffmpeg-next = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
webrtc = {workspace = true }
webrtc-util = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
opus = { workspace = true }
spectrum-analyzer = "1.7.0"
rand = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
signal-hook = { workspace = true }
tokio-tungstenite = "0.21.0"
wgpu = { workspace = true }
image = { workspace = true }
regex = "1.10.6"
inquire = "0.7.5"
strum = { version = "0.27", features = ["derive"] }
fuzzy-matcher = "0.3.7"
typetag = "0.2.20"
