[package]
name = "rtmp"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
crossbeam-channel = "0.5.15"
tracing = "0.1.40"
thiserror = "1.0.40"
url = "2.5.2"
rand = "0.9.3"
rustls = "0.23.37"
rustls-native-certs = "0.8.3"

[dev-dependencies]
tracing-subscriber = "0.3.20"

[lints]
workspace = true
