[package]
name = "smelter-api"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"

[features]
default = []
decklink = ["smelter-core/decklink"]
web-renderer = ["smelter-core/web-renderer"]

[dependencies]
smelter-render = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smelter-core = { workspace = true }

[lints]
workspace = true
