[package]
name = "smelter-core"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
decklink = ["dep:decklink"]
web-renderer = ["smelter-render/web-renderer"]
vk-video = []

[dependencies]
smelter-render = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ffmpeg-next = { workspace = true }
webrtc = { workspace = true }
webrtc-util = { workspace = true }
socket2 = { workspace = true }
opus = { workspace = true }
rand = { workspace = true }
mp4 = { git = "https://github.com/smelter-labs/mp4-rust.git", branch = "preserve-asc" }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fdk-aac-sys = "0.5.0"
rubato = "0.15.0"
wgpu = { workspace = true }
vk-video = { workspace = true }
glyphon = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
axum = { version = "0.7.7", features = ["macros"] }
tower-http = { workspace = true }
url = "2.5.2"
urlencoding = "2.1.3"
itertools = { workspace = true }
uuid = "1.17.0"
pollster = { workspace = true }
libc = { workspace = true }

[target.x86_64-unknown-linux-gnu.dependencies]
decklink = { path = "../decklink", optional = true }
v4l = "0.14.0"

[lints]
workspace = true
