[package]
name = "smelter-render"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
web-renderer = ["dep:libcef", "dep:shared_memory"]

[dependencies]
pollster = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
libcef = { workspace = true, optional = true }
image = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
bytemuck = { version = "1.13.1", features = ["derive"] }
glyphon = { workspace = true }
crossbeam-channel = { workspace = true }
resvg = "0.35.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
naga = "25.0.0"
rand = { workspace = true }
tracing = { workspace = true }
shared_memory = { workspace = true, optional = true }
sys-locale = "0.3.1"
ash = "0.38.0"
vk-mem = "0.5.0"
