[package]
name = "smelter-render"
version = "0.6.0"
edition = "2024"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dmabuf = ["dep:gpu-video"]
web-renderer = ["dep:libcef", "dep:shared_memory"]

[dependencies]
pollster = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
libcef = { workspace = true, optional = true }
image = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
bytemuck = { version = "1.13.1", features = ["derive"] }
glyphon = { workspace = true }
crossbeam-channel = { workspace = true }
resvg = "0.35.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
naga = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
rand = { workspace = true }
tracing = { workspace = true }
shared_memory = { workspace = true, optional = true }
itertools = { workspace = true }
sys-locale = "0.3.1"
gpu-video = { workspace = true, features = ["dmabuf"], optional = true }

[lints]
workspace = true
