[package]
name = "smelter_api"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[features]
default = []
decklink = ["smelter_core/decklink"]
web_renderer = ["smelter_core/web_renderer"]
vk-video = ["smelter_core/vk-video"]

[dependencies]
smelter_render = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smelter_core = { workspace = true }

