[package]
name = "libcef-sys"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.177"

[build-dependencies]
anyhow = { workspace = true }
bindgen = "0.72.1"
cmake = "0.1.50"
dirs = "5.0.1"
fs_extra = "1.3.0"
reqwest = { workspace = true }

[lints]
workspace = true
