[project]
name = "smelter-sdk"
version = "0.1.0"
description = "Python client for Smelter — a real-time, low-latency, programmable video and audio composition toolkit."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Software Mansion S.A." },
]
keywords = [
    "smelter",
    "video",
    "audio",
    "streaming",
    "rtmp",
    "webrtc",
    "compositor",
    "real-time",
    "media",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://smelter.dev"
Documentation = "https://smelter.dev/docs"
Repository = "https://github.com/software-mansion/smelter"
Issues = "https://github.com/software-mansion/smelter/issues"

[tool.hatch.build.targets.wheel]
packages = ["smelter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
